--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <meta name="description" content="Maxime Morel ThreeJS portfolio">
-    <title>Maxime Portfolio</title>
+    <meta name="description" content="Fauzan Fuadi ThreeJS portfolio">
+    <title>Fauzan Portfolio</title>
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
@@ -21,7 +21,7 @@
     <div class="theme">
         <i class="fa-regular fa-sun"></i>
         <button id="night-switch">
-            <span class="hidden">switch day/night theme</span>
+            <span class="hidden">Ganti tema siang/malam</span>
         </button>
         <i class="fa-regular fa-moon"></i>
     </div>
@@ -113,8 +113,8 @@
         <div>
             <h2 class="h1">Get in touch!</h2>
             <div class="contact">
-                <h3 class="h3">A question? Project?</h3>
-                <h3 class="h3">Contact me over there!</h3>
+                <h3 class="h3">Punya Pertanyaan? Project?</h3>
+                <h3 class="h3">Hubungi aku di sini!</h3>
                 <div class="space"></div>
                 <p class="h3"><i class="fa-solid fa-envelope"></i> &nbsp; By mail: &nbsp; <a href="mailto:contact@maxime-morel.xyz">contact@maxime-morel.xyz</a></p>
                 
@@ -126,17 +126,17 @@
         <div class="mobile-alert">
             <h2 class="h1 warning">
                 <i class="fa-solid fa-triangle-exclamation"></i>
-                <span class="hidden">Alert</span>
+                <span class="hidden">Peringatan</span>
             </h2>
             <h3 class="h1 smaller">
-                Suboptimal experience warning!
+                peringatan pengalaman optimal
             </h3>
             <h4 class="h3">
-                Optimal viewing experience on mobile devices is in <strong>portrait orientation</strong>
+                Pengalaman melihat optimal di perangkat seluler masuk <strong>potret orientasi</strong>
             </h4>
             <p>
                 <i class="fa-solid fa-lightbulb"></i>
-                For the ultimate experience, consider switching to a computer
+                Untuk pengalaman utama, pertimbangkan untuk beralih ke komputer
             </p>
             <button class="btn" onclick="closeModal()">Got it !</button>
         </div>
@@ -155,20 +155,20 @@
         </div>
         <div class="cc">
             <p>&copy; 2024 -&nbsp;</p>
-            <h1>Maxime Morel</h1>
+            <h1>Fauzan Fuadi</h1>
         </div>
         <ul class="socials">
-            <li><a href="https://github.com/maxime-mrl" target="_blank">
+            <li><a href="https://github.com/LevinChun" target="_blank">
                 <i class="fa-brands fa-github"></i>
                 <span class="hidden">Github</span>
             </a></li>
-            <li><a href="https://www.behance.net/maxime-mrl" target="_blank">
-                <i class="fa-brands fa-behance"></i>
-                <span class="hidden">Behance</span>
+            <li><a href="https://wa.me/6285640429082" target="_blank">
+                <i class="fa-brands fa-whatsapp"></i>
+                <span class="hidden">WhatsApp</span>
             </a></li>
-            <li><a href="https://codepen.io/maximel-mrl" target="_blank">
-                <i class="fa-brands fa-codepen"></i>
-                <span class="hidden">Codepen</span>
+            <li><a href="https://t.me/fauzandev" target="_blank">
+                <i class="fa-brands fa-telegram"></i>
+                <span class="hidden">Telegram</span>
             </a></li>
         </ul>
     </footer>
